<resources>
    <string name="app_name">New York Times</string>
    <string name="empty_list">Looks like no articles for the filter set!</string>
    <string name="title_search">Search an article!</string>
    <string name="search_hint">Education</string>
    <string name="toolbar_title">New York Times</string>
    <string name="load_more">Scroll to watch more!</string>
    <string name="no_more_data">All articles loaded here!</string>
    <string name="title_share">Share</string>
    <string name="share_link_msg">Check out this link ...</string>
    <string name="share_content_type">text/plain</string>
    <string name="begin_date">Begin Date :</string>
    <string name="hintDate">2/2/2014</string>
    <string name="filter_sort">Sort</string>
    <string name="news_desk">News Type</string>
    <string name="arts">Arts</string>
    <string name="fashion">Fashion</string>
    <string name="sports">Sports</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="create_filter">Set Filter</string>
    <string name="sort_prompt">sort_prompt</string>
    <string name="action_settings">Filter Settings</string>
    <string name="filter_title">Apply following filters :</string>
    <string name="comm_failure">Seems some problem connecting with server!</string>
    <string name="no_response">No more articles for given search momentarily!</string>

    <string-array name="sort_order_array">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
</resources>
